force-app/main/default/objects/Tax_Identification__c/Tax_Identification__c.object-meta.xml
<CustomObject>
    <label>Tax Identification</label>
    <nameField>
        <label>Tax Identification Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Identifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>