force-app/main/default/objects/Tax_Identification__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tax Identifications</relationshipLabel>
    <relationshipName>Tax_Identifications</relationshipName>
    <type>Lookup</type>
</CustomField>