force-app/main/default/objects/Tax_Identification__c/fields/Reason_No_Tin__c.field-meta.xml
<CustomField>
    <fullName>Reason_No_Tin__c</fullName>
    <label>Reason No Tin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NOT_ASSIGNED_YET</fullName>
                <label>Not Assigned Yet</label>
            </value>
            <value>
                <fullName>NOT_ASSIGNED_BY_COUNTRY</fullName>
                <label>Not Assigned By Country</label>
            </value>
            <value>
                <fullName>OTHER</fullName>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>